// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

=====================================output=====================================
// @flow

================================================================================
`;

exports[`b.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 * @providesModule b
 */
require('./a');

=====================================output=====================================
/**
 * @flow
 * @providesModule b
 */
require("./a");

================================================================================
`;

exports[`c.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./a.js');
require('b');

=====================================output=====================================
// @flow
require("./a.js");
require("b");

================================================================================
`;
